enhance: add license and setup conventional-changelog tool

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "aya.code",
   "displayName": "AyaCode",
   "description": "This plugin provides an interactive way to display a verse (Aya) from the Quran in a dialog box each time you start a new session. Choose between displaying verses in a random order or sequentially to suit your preferences.",
-  "version": "0.0.1",
+  "version": "v1.0.0",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.92.0"
   },
@@ -50,20 +51,22 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@types/vscode": "^1.92.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
+    "@types/vscode": "^1.92.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
+    "@vscode/test-electron": "^2.4.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
