--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "AyaCode",
   "description": "Start Your Coding Session with a Verse of Quran",
   "version": "v1.0.0",
-  "publisher": "Abdullah Ali",
+  "publisher": "Abdullah-Ali",
   "icon": "icon.jpeg",
   "license": "MIT",
   "engines": {
