chore: package name updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aya.code",
+  "name": "ayacode",
   "displayName": "AyaCode",
   "description": "Start Your Coding Session with a Verse of Quran",
   "version": "v1.0.0",
