chore: compliant version

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ayacode",
   "displayName": "AyaCode",
   "description": "Start Your Coding Session with a Verse of Quran",
-  "version": "v1.0.0",
+  "version": "1.0.0",
   "publisher": "Abdullah-Ali",
   "icon": "icon.jpeg",
   "repository": "https://github.com/Abdullah-A-Elsayed/AyaCode",
